# 3dTerminalRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
demos/: CMakeLists.txt
demos/cube/: CMakeLists.txt  cube_demo.c
demos/ply/: CMakeLists.txt  ply_demo.c
include/3dTerminal/: 3d_event_helpers.h  3dterminal.h  draw.h  events.h  handles.h  ply_utils.h  render.h  utils.h
include/3dTerminal/datastructures/: dynamicArray.h  queue.h
old/: samples.c
resources/: dragon.ply
src/: 3d_event_helpers.c  draw.c  events.c  main.c  ply_utils.c  render.c  utils.c
